# BioPulse

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
biopulse/: __init__.py
biopulse/core/animation/: interp.py  state.py
biopulse/core/renderer/: _pixi_graph.js  _pixi_play.js  _raster.py  widget.py
biopulse/core/timeline/: clock.py  scheduler.py
biopulse/io/: exporters.py  json_loader.py
biopulse/layouts/: base.py  forceatlas.py
biopulse/model/: events.py  graph.py  schema.py
biopulse/parsers/: __init__.py  ginml.py  sbml.py  sif.py
examples/: export_animation.py  play_cascade.py
examples/data/: feedforward_loop.graph.json  il6_stat3.sbml  il6_stat3.scene.json  il6_stat3.sif  il6_stat3_cascade.html  il6_stat3_cascade.scene.json  toggle.events.json  toggle_switch.ginml  toggle_switch.sif
schema/: event.schema.json  graph.schema.json  scene.schema.json
tests/: test_animation_state.py  test_clock.py  test_events.py  test_exporters.py  test_graph.py  test_interp.py  test_layout.py  test_loader.py  test_parsers.py  test_phase4.py  test_phase7.py  test_play_widget.py  test_scheduler.py  test_schema.py  test_smoke.py  test_widget.py
