[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biopulse"
version = "0.0.0"
description = "Dynamic visualization engine for Boolean and biological networks."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Nathan Foulquier" }]
keywords = ["biology", "networks", "visualization", "boolean", "systems-biology"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pydantic>=2.6",
    "networkx>=3.2",
    "numpy>=1.24",
    "anywidget>=0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
]
export = [
    "Pillow>=10.0",
    "imageio[ffmpeg]>=2.33",
]

[project.urls]
Repository = "https://github.com/Nurtal/BioPulse"

[tool.hatch.build.targets.wheel]
packages = ["biopulse"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["biopulse", "tests"]

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*", "numpy", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anywidget", "anywidget.*", "traitlets", "traitlets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["PIL", "PIL.*", "imageio", "imageio.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
